@@ -1,3 +1,8 @@
+2010-05-25	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* librpc/src/rpc/rpc_prot.c: Partial merger from freebsd
+	(Improved 64 bit compatibility; bug fix).
+
 2010-05-23	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	PR 1528/cpukit
